# libs/shared/api-types/src/lib/index.ts
@@ -62,6 +62,7 @@ export type { TenantResponse } from './models/tenant-response';
 export type { TenantUpdateRequest } from './models/tenant-update-request';
 export type { UpdateRepairCostRequest } from './models/update-repair-cost-request';
 export type { UpdateTicketStatusRequest } from './models/update-ticket-status-request';
+export type { UserResponse } from './models/user-response';
 export type { VerifyOtpRequest } from './models/verify-otp-request';
 
 export type { GetById$Params as GetById$Params } from './fn/property/get-by-id';
@@ -154,6 +155,10 @@ export type { ForgotPasswordSendOtp$Params as ForgotPasswordSendOtp$Params } fro
 export { forgotPasswordSendOtp as forgotPasswordSendOtp } from './fn/mobile/forgot-password-send-otp';
 export type { ForgotPasswordReset$Params as ForgotPasswordReset$Params } from './fn/mobile/forgot-password-reset';
 export { forgotPasswordReset as forgotPasswordReset } from './fn/mobile/forgot-password-reset';
+export type { GetByUserId$Params as GetByUserId$Params } from './fn/mobile/get-by-user-id';
+export { getByUserId as getByUserId } from './fn/mobile/get-by-user-id';
+export type { GetByKeycloakId$Params as GetByKeycloakId$Params } from './fn/mobile/get-by-keycloak-id';
+export { getByKeycloakId as getByKeycloakId } from './fn/mobile/get-by-keycloak-id';
 export type { List$Params as List$Params } from './fn/ticketing/list';
 export { list as list } from './fn/ticketing/list';
 export type { Create$Params as Create$Params } from './fn/ticketing/create';
