# libs/shared/api-types/src/lib/models/assign-role-request.ts
@@ -2,5 +2,5 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 export interface AssignRoleRequest {
-  role: 'CLIENT' | 'OWNER' | 'ADMIN' | 'SUPER_ADMIN' | 'PARTNER';
+  role: 'CLIENT' | 'OWNER' | 'ADMIN' | 'SUPER_ADMIN' | 'PARTNER' | 'PARTNER_ADMIN';
 }
